# hsr_tinyflatobj_sucking

./: .gitignore  CMakeLists.txt  README.md  package.xml  saved_dictionary.pkl
action/: ArmMovement.action  FindObject.action  PickObject.action
scripts/: arm_movement_action_server.py  execute_grasp.py  execute_suction_action.py  execute_suction_action_server.py  find_object_action_server.py  found_object_broadcaster.py  hsr_test.py  listener.py  maps.py  pick_object_action_server.py  small_objects_statemachine.py  start.sh  start_real.sh  tf2_broadcaster.py  user_input.py  waypoint_maps.py
scripts/maps/: custom_1.pkl  custom_2.pkl  gazebo_tu_room.pkl  settings.pkl  tu_room.pkl
